[package]
name = "quiqr"
version = "0.1.0"
authors = ["Axel Wettervik <axel@calmid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.17.0"
qrcode = "0.12.0"
image = "0.23.8"
structopt = "0.3.15"
env_logger = "0.7.1"
log = "0.4.11"
clipboard = "0.5.0"
thiserror = "1.0.20"
anyhow = "1.0.32"
