[package]
name = "quiqr"
version = "0.1.1"
edition = "2018"
build = "build.rs"
license = "MIT"
readme = "README.md"
authors = ["Axel Wettervik <axel.wettervik@gmail.com>"]
description = "A tool for quickly generating a QR code and displaying it on screen."
homepage = "https://github.com/agelito/quiqr"
repository = "https://github.com/agelito/quiqr"
keywords = ["QR", "Productivity", "Tool", "Utility"]
categories = ["multimedia::images", "visualization"]

[package.metadata.winres]
OriginalFilename = "QUIQR.EXE"
LegalCopyright = "Copyright © Axel Wettervik 2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.17.0"
qrcode = "0.12.0"
image = "0.23.8"
structopt = "0.3.15"
env_logger = "0.7.1"
log = "0.4.11"
clipboard = "0.5.0"
anyhow = "1.0.32"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
